...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="List of Cities"
                android:textSize="30dp" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="559dp"
                android:layout_weight="1"
                android:drawSelectorOnTop="false" />

            <Button
...
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonWeather"
                android:text="View Map" />


            <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add a location" />

            <Button
                android:id="@+id/buttonRemoveLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove a location" />
...
