...
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:hint="Enter password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="Login" />


...
